<resources>
    <string name="app_name">Neptune Notes</string>
    <string name="headerText">Neptune Notes</string>
    <string name="motto">Write anything!</string>
    <string name="email">Type your email</string>
    <string name="password">Type your password</string>
    <string name="loginSt">Login</string>
    <string name="signupSt">Sign Up</string>
    <string name="usernameSt">Type your username</string>
    <string name="matchPass">Retype your password</string>
    <string name="create">Create account</string>
    <string name="logout">Logout</string>
    <string name="greeting">Welcome, </string>
    <string name="new_note">Create a note</string>
    <string name="n_title_hint">Note title</string>
    <string name="note_txt_hint">Type your note here</string>
</resources>