<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logonn2"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motto"
        android:textColor="@color/neptune_blue_231"
        android:textSize="18sp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:layout_editor_absoluteY="179dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLogin"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextColor="@color/neptune_blue_216"
        app:boxStrokeColor="@color/neptune_blue_216"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/motto">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLogin"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:importantForAutofill="no"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/neptune_blue_216"
        app:boxStrokeColor="@color/neptune_blue_216"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/loginSt"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/neptune_blue_150"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/signupSt"
        android:textColor="@color/neptune_blue_150"

        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>