<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupSt"
        android:textSize="45dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/neptune_blue_150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailSignup"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextColor="@color/neptune_blue_216"
        app:boxStrokeColor="@color/neptune_blue_216"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/signupTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailSignup1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameSignup"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/usernameSt"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintTextColor="@color/neptune_blue_216"
        app:boxStrokeColor="@color/neptune_blue_216"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/emailSignup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameSignup1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignup"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:importantForAutofill="no"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/neptune_blue_216"
        app:boxStrokeColor="@color/neptune_blue_216"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordSignup1"

            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignupMatch"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        app:passwordToggleEnabled="true"
        android:hint="@string/matchPass"
        android:importantForAutofill="no"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:hintTextColor="@color/neptune_blue_216"
        app:boxStrokeColor="@color/neptune_blue_216"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordSignupMatch1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createAccount"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/neptune_blue_150"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignupMatch" />



    p
</androidx.constraintlayout.widget.ConstraintLayout>